--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     overflow-x: auto;
     width: 100%;
     flex-shrink: 0;
+    color: white;
 }
 
 .logo-bar {
@@ -38,6 +39,7 @@ body {
     display: flex;
     width: 48px;
     height: 48px;
+
 }
 
 .main {
@@ -52,16 +54,25 @@ body {
     background: rgb(233, 235, 238);
     flex-shrink: 0;
     overflow-x: auto;
+
 }
 
 .sidebar-icon {
     display: flex;
-    width: 40px;
     height: 40px;
+    justify-content: center;
+}
+
+.sidebar-container {
+    padding-right: 25px;
 }
 
 .sidebar-link {
     display: none;
+}
+
+.label {
+    padding-right: 15px;
 }
 
 .favorites {
@@ -102,6 +113,7 @@ body {
 
     .sidebar-icon {
         flex-direction: column;
+        width: 40px;
     }
     
     .sidebar-link {
